--- a/src/componentes/CampoTexto/CampoTexto.css
+++ b/src/componentes/CampoTexto/CampoTexto.css
@@ -3,17 +3,21 @@
 }
 
 .campo-texto label {
+    color: #BFBFCB;
     display: block;
     margin-bottom: 8px;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .campo-texto input {
-    background-color: #FFF;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
+    background-color: #1A1A20;
+    box-shadow: 10px 10px 30px rgba(124, 111, 111, 0.06);
     width: 100%;
     border: none;
-    font-size: 24px;
-    padding: 24px;
+    font-size: 18px;
+    padding: 12px;
     box-sizing: border-box;
+    border: 1px solid #7c7c7c;
+    border-radius: 10px;
+    color: #FFF;
 }
