--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,13 +1,31 @@
 .formulario {
     display: flex;
     justify-content: center;
-    margin: 80px 0;
+    margin: 50px 80px;
 }
 
 .formulario form {
     max-width: 80%;
-    background-color: #F2F2F2;
-    border-radius: 20px;
+    background-color: #1A1A20;
+    border-radius: 0px  20px  20px 0px;
     padding: 36px 64px;
     box-shadow: 8px 8px 16px rgba(0,0,0, 0.08);
+    border: 0,5px solid #7c7c7c;
+}
+
+.formulario div img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Mantém a proporção da imagem */
+    border-radius: 20px 0 0 20px;
+    max-width: 500px;
+}
+
+.formulario h2 {
+    margin-bottom: 5px;
+    color: #e1e1e6;
+    font-size: 20px;
+    border-bottom: 2px solid;
+    display: inline-block;
+    padding-bottom: 8px;
 }
