--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -14,7 +14,7 @@
 
 .time .jogadores {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin-top: 32px;
     flex-wrap: wrap;
 }
